--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/BananaMan3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BananaMan3.data.gz",
-        frameworkUrl: buildUrl + "/BananaMan3.framework.js.gz",
-        codeUrl: buildUrl + "/BananaMan3.wasm.gz",
+        dataUrl: buildUrl + "/BananaMan3.data",
+        frameworkUrl: buildUrl + "/BananaMan3.framework.js",
+        codeUrl: buildUrl + "/BananaMan3.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "LearningUnity1",
